Avoid overflow because of shapes

--- a/components/content/content.module.scss
+++ b/components/content/content.module.scss
@@ -9,6 +9,7 @@
 	padding: 0 var(--padding);
 	width: 100%;
 	max-width: 1400px;
+	overflow: hidden;
 
 	@media (max-width: 1000px) {
 		--indention: 2em;
